# openclaw

./: .env.example  .gitignore  .pre-commit-config.yaml  .watchfilesignore  7block_need_add_to_dashboard.md  AGENTS.md  CLAUDE.md  Dockerfile.app  Dockerfile.worker  E2E_PIPELINE_SKILL_TEMPLATE.md  HOST_MODE_PLAN.md  MASTERPLANAGENT.md  PLAN.md  SETUP.md  SLACK_AUDIT_REPORT.md  TESTING.md  agent.ts  alembic.ini  auth.json  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  index.ts  pyproject.toml
.claude/: settings.json
.playwright-mcp/: page-2026-04-08T05-09-50-405Z.yml  page-2026-04-08T05-11-37-183Z.yml  page-2026-04-08T05-11-43-406Z.yml  page-2026-04-08T05-12-13-251Z.yml  page-2026-04-08T05-12-36-161Z.yml  page-2026-04-08T05-12-44-267Z.yml  page-2026-04-08T05-13-16-108Z.yml  page-2026-04-08T05-13-29-037Z.yml  page-2026-04-08T05-14-13-961Z.yml  page-2026-04-08T06-44-32-726Z.yml  page-2026-04-08T06-44-41-967Z.yml  page-2026-04-08T06-44-59-576Z.yml  page-2026-04-08T06-45-08-711Z.yml  page-2026-04-08T06-45-37-685Z.yml  page-2026-04-08T06-45-45-542Z.yml  page-2026-04-08T06-46-22-672Z.yml  page-2026-04-08T06-46-35-791Z.yml  page-2026-04-08T09-24-44-596Z.yml  page-2026-04-08T09-24-52-128Z.yml  page-2026-04-08T09-25-18-317Z.yml  page-2026-04-08T09-25-35-845Z.yml  page-2026-04-08T09-28-08-182Z.yml  page-2026-04-08T09-29-27-031Z.yml  page-2026-04-08T09-39-37-456Z.yml  page-2026-04-08T09-40-01-339Z.yml  page-2026-04-08T09-40-41-859Z.yml  page-2026-04-08T09-41-05-403Z.yml  page-2026-04-08T09-49-36-014Z.yml  page-2026-04-08T09-50-26-798Z.yml  (+108 more)
(+523 files in other folders)
